force-app/main/default/objects/Solicitacao__c/Solicitacao__c.object-meta.xml
<CustomObject>
    <description>Objeto para controlar solicitações e ajustes do projeto</description>
    <label>Solicitação</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Nome de Solicitaçoes</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>