force-app/main/default/objects/Solicitacao__c/fields/AssuntoTxt__c.field-meta.xml
<CustomField>
    <fullName>AssuntoTxt__c</fullName>
    <label>Assunto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>