force-app/main/default/objects/Solicitacao__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não classificado</fullName>
            </value>
            <value>
                <fullName>Campanha de Trd Mkt</fullName>
            </value>
            <value>
                <fullName>Casos</fullName>
            </value>
            <value>
                <fullName>Catalogo de produtos</fullName>
            </value>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Comunidade de Parceiros</fullName>
            </value>
            <value>
                <fullName>Cotação</fullName>
            </value>
            <value>
                <fullName>Cotas</fullName>
            </value>
            <value>
                <fullName>Novo Cliente</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Oportunidade</fullName>
            </value>
            <value>
                <fullName>Ordem de venda</fullName>
            </value>
            <value>
                <fullName>Pesquisa de Preço</fullName>
            </value>
            <value>
                <fullName>Planejamento de vendas</fullName>
            </value>
            <value>
                <fullName>Produtos</fullName>
            </value>
            <value>
                <fullName>Projeto</fullName>
            </value>
            <value>
                <fullName>Radar de Obras</fullName>
            </value>
            <value>
                <fullName>Relatórios</fullName>
            </value>
            <value>
                <fullName>Verde Amanco</fullName>
            </value>
            <value>
                <fullName>Visitas</fullName>
            </value>
            <value>
                <fullName>SAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>