force-app/main/default/objects/Solicitacao__c/fields/DescriptionTxt__c.field-meta.xml
<CustomField>
    <fullName>DescriptionTxt__c</fullName>
    <label>Descrição</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>