force-app/main/default/objects/Solicitacao__c/fields/EffortQUALITxt__c.field-meta.xml
<CustomField>
    <fullName>EffortQUALITxt__c</fullName>
    <label>Esforço QUALI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alto</fullName>
            </value>
            <value>
                <fullName>Médio</fullName>
            </value>
            <value>
                <fullName>Baixo</fullName>
            </value>
            <value>
                <fullName>Pendente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>