force-app/main/default/objects/Solicitacao__c/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origem</label>
    <referenceTo>Origem__c</referenceTo>
    <relationshipLabel>Solicitações</relationshipLabel>
    <relationshipName>Solicitacoes</relationshipName>
    <type>Lookup</type>
</CustomField>