force-app/main/default/objects/Solicitacao__c/fields/OwnerNameFml__c.field-meta.xml
<CustomField>
    <fullName>OwnerNameFml__c</fullName>
    <formula>Owner:User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Proprietário</label>
    <type>Text</type>
</CustomField>