force-app/main/default/objects/Solicitacao__c/fields/PriorityQUALITxt__c.field-meta.xml
<CustomField>
    <fullName>PriorityQUALITxt__c</fullName>
    <label>Prioridade QUALI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alto</fullName>
            </value>
            <value>
                <fullName>Médio</fullName>
            </value>
            <value>
                <fullName>Baixo</fullName>
            </value>
            <value>
                <fullName>Pendente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>