force-app/main/default/objects/Solicitacao__c/fields/ShowstopperBln__c.field-meta.xml
<CustomField>
    <fullName>ShowstopperBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impeditivo_old</label>
    <type>Checkbox</type>
</CustomField>