force-app/main/default/objects/Solicitacao__c/fields/ShowstopperTxt__c.field-meta.xml
<CustomField>
    <fullName>ShowstopperTxt__c</fullName>
    <label>É impeditivo?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>