force-app/main/default/objects/Solicitacao__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novo</fullName>
                <default>true</default>
                <label>Novo</label>
            </value>
            <value>
                <fullName>Pendente EF</fullName>
            </value>
            <value>
                <fullName>Pendente ET</fullName>
            </value>
            <value>
                <fullName>Pendente Execução</fullName>
            </value>
            <value>
                <fullName>Em andamento</fullName>
            </value>
            <value>
                <fullName>Executado</fullName>
            </value>
            <value>
                <fullName>Validar</fullName>
            </value>
            <value>
                <fullName>Validado</fullName>
            </value>
            <value>
                <fullName>Backlog</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>