force-app/main/default/objects/Solicitacao__c/fields/SubcategoryTxt__c.field-meta.xml
<CustomField>
    <fullName>SubcategoryTxt__c</fullName>
    <label>Sub-categoria</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Categoria__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Catálogo</fullName>
            </value>
            <value>
                <fullName>Colunas da Lista de itens</fullName>
            </value>
            <value>
                <fullName>Comissões/Frete</fullName>
            </value>
            <value>
                <fullName>Condição de pagamento</fullName>
            </value>
            <value>
                <fullName>Digitação de Itens</fullName>
            </value>
            <value>
                <fullName>Embalagem</fullName>
            </value>
            <value>
                <fullName>Geral</fullName>
            </value>
            <value>
                <fullName>Importação de itens</fullName>
            </value>
            <value>
                <fullName>Nota de Crédito</fullName>
            </value>
            <value>
                <fullName>PVC</fullName>
            </value>
            <value>
                <fullName>Resumo do Pedido</fullName>
            </value>
            <value>
                <fullName>Resumo Tela de Pedido</fullName>
            </value>
            <value>
                <fullName>Status do pedido</fullName>
            </value>
            <value>
                <fullName>Tipo de ordem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>