force-app/main/default/objects/Solicitacao__c/fields/TypeTxt__c.field-meta.xml
<CustomField>
    <fullName>TypeTxt__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ajuste</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
            </value>
            <value>
                <fullName>Definição</fullName>
            </value>
            <value>
                <fullName>Erro</fullName>
            </value>
            <value>
                <fullName>Escopo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>