force-app/main/default/objects/Solicitacao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AssuntoTxt__c</columns>
    <columns>TypeTxt__c</columns>
    <columns>ShowstopperTxt__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TypeTxt__c</field>
        <operation>notEqual</operation>
        <value>Definição</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Caio Corrêa</value>
    </filters>
    <label>Tudo</label>
</ListView>