force-app/main/default/objects/Solicitacao__c/listViews/Grillo.listView-meta.xml
<ListView>
    <fullName>Grillo</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>AssuntoTxt__c</columns>
    <columns>EffortQUALITxt__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Luiz</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>contains</operation>
        <value>Brandão</value>
    </filters>
    <filters>
        <field>ShowstopperTxt__c</field>
        <operation>equals</operation>
        <value>Sim</value>
    </filters>
    <filters>
        <field>TypeTxt__c</field>
        <operation>equals</operation>
        <value>Erro</value>
    </filters>
    <label>Cricket</label>
</ListView>