force-app/main/default/objects/Solicitacao__c/listViews/Minhas_solicita_es.listView-meta.xml
<ListView>
    <fullName>Minhas_solicita_es</fullName>
    <columns>NAME</columns>
    <columns>AssuntoTxt__c</columns>
    <columns>ShowstopperTxt__c</columns>
    <columns>TypeTxt__c</columns>
    <columns>EffortQUALITxt__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Minhas solicitações</label>
</ListView>