force-app/main/default/objects/Solicitacao__c/listViews/Minhas_solicita_es_erros.listView-meta.xml
<ListView>
    <fullName>Minhas_solicita_es_erros</fullName>
    <booleanFilter>(1 OR 2)</booleanFilter>
    <columns>NAME</columns>
    <columns>Categoria__c</columns>
    <columns>AssuntoTxt__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TypeTxt__c</field>
        <operation>equals</operation>
        <value>Erro</value>
    </filters>
    <filters>
        <field>ShowstopperTxt__c</field>
        <operation>equals</operation>
        <value>Sim</value>
    </filters>
    <label>Minhas solicitações - Impeditivos/Erros</label>
</ListView>