force-app/main/default/objects/Solicitacao__c/listViews/Necess_rios.listView-meta.xml
<ListView>
    <fullName>Necess_rios</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>AssuntoTxt__c</columns>
    <columns>DescriptionTxt__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>TypeTxt__c</columns>
    <columns>EffortQUALITxt__c</columns>
    <columns>Status__c</columns>
    <columns>ShowstopperBln__c</columns>
    <columns>Origem__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ShowstopperTxt__c</field>
        <operation>equals</operation>
        <value>Sim</value>
    </filters>
    <filters>
        <field>TypeTxt__c</field>
        <operation>equals</operation>
        <value>Erro</value>
    </filters>
    <label>Necessários</label>
</ListView>