force-app/main/default/objects/Solicitacao__c/listViews/Solicita_es_Impeditivos_Erros_Gui.listView-meta.xml
<ListView>
    <fullName>Solicita_es_Impeditivos_Erros_Gui</fullName>
    <booleanFilter>(1 OR 2)</booleanFilter>
    <columns>NAME</columns>
    <columns>Categoria__c</columns>
    <columns>AssuntoTxt__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ShowstopperTxt__c</field>
        <operation>equals</operation>
        <value>Sim</value>
    </filters>
    <filters>
        <field>TypeTxt__c</field>
        <operation>equals</operation>
        <value>Erro</value>
    </filters>
    <label>Solicitações - Impeditivos/Erros</label>
</ListView>