force-app/main/default/objects/Solicitacao__c/listViews/Tudo_Lista.listView-meta.xml
<ListView>
    <fullName>Tudo_Lista</fullName>
    <columns>NAME</columns>
    <columns>Categoria__c</columns>
    <columns>AssuntoTxt__c</columns>
    <columns>DescriptionTxt__c</columns>
    <columns>TypeTxt__c</columns>
    <columns>ShowstopperTxt__c</columns>
    <columns>Status__c</columns>
    <columns>Origem__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Davi</value>
    </filters>
    <label>Tudo - Lista</label>
</ListView>